xx/xx/2005 - 1.11.1-WIP

	- ntfsmount: fix buffer allocation in ntfs_fuse_filler.  (Yura, thanks
	  to Rich for finding bug)

19/07/2005 - 1.11.0 - Fixes and a new utility ntfsmount, a FUSE ntfs module.

	- ntfscp: fix signal hanling: handle both SIGTERM and SIGINT, print
	  correct message.  (Yura)
	- Update manual pages for ntfsprogs, ntfsclone, ntfsresize and 
	  ntfsfix.  (Szaka)
	- ntfsclone: detect and hint users if the destination fs does not
	  support sparse files.  (Szaka)
	- Fix memory managament error in ntfs_inode_close.  (Yura)
	- Add new utility - ntfsmount.  It is a FUSE module that reles on
	  libntfs.  (Yura)
	- ntfsresize: support bad clusters list ($BadClus:$Bad), a.k.a. disks
	  having bad sectors if the new --bad-sectors option is used.  (Szaka)
	- ntfsinfo: Dump $EA_INFORMATION and $EA attributes.  (Yura)
	- mkntfs: Fix backup bootsector creation.  Thanks to Timur Amirkhanov
	  for pointing these stupidities out.  (We forgot to set the size
	  before doing it and we wrote more bytes then there were in the buffer
	  if sector size was above 8kiB and we only reserved one sector even
	  when sector size was less than 512 bytes and then we wrote 512 bytes,
	  i.e. beyond the end of the device.)  (Anton)
	- Add new utility (make extra) - ntfsdecrypt.  (Yuval)
	- Improve "already mounted" check.  (Yura)
	- Remove AC_FUNC_MALLOC and AC_FUNC_REALLOC from configure.ac as we
	  do not provide replacement functions for them and the checks break
	  cross compilation.  (Christophe)

20/06/2005 - 1.10.0 - Lots of new features, enhancements, and bug fixes.

	- Add start_vcn parameter to ntfs_get_size_for_mapping_pairs() and
	  ntfs_mapping_pairs_build() and adapt all callers.
	- Bump library version due to source level API change above.
	- Add ntfs_debug() and ntfs_error() to make kernel<->userspace porting
	  easier.
	- ntfsinfo: Added dumping of index records from $INDEX_ROOT and 
	  $INDEX_ALLOCATION.  (Yura)